# pytest_studies

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/tasks/: api.py  cli.py
src/utils/: calculator.py
test/: conftest.py  pytest.ini
test/functional/: test_api_exceptions.py  test_api_successful.py  test_cli.py
test/unit/: test_monkeypatch.py  test_smoke_sample.py  test_task.py
